--- a/lib-dist/coreui-user-styles.css
+++ b/lib-dist/coreui-user-styles.css
@@ -10,3 +10,9 @@
     padding-left: 10px;
     color: #000;
 }
+
+/* class is set if breadcrumb is deactivated */
+.breadcrumb-empty {
+    height: 0;
+    padding: 0;
+}
